cmake_minimum_required(VERSION 2.6)
project(CastorTest)
set(CMAKE_CXX_FLAGS "-g -std=c++0x -Wall -Wextra -pedantic ")
include_directories(${CastorTest_SOURCE_DIR}/src)
add_executable(CastorTest ${CastorTest_SOURCE_DIR}/src/euler_castor.cc)
add_executable(VaultExample ${CastorTest_SOURCE_DIR}/src/vault.cc)
add_executable(Euler ${CastorTest_SOURCE_DIR}/src/euler_std.cc.cc)
