cmake_minimum_required(VERSION 2.6)
project(CastorTest)
set(CMAKE_BUILD_TYPE="Debug")
set(CMAKE_CXX_FLAGS "-g -std=c++11 -stdlib=libc++ -Wall -Wextra -pedantic ")
set(CMAKE_EXE_LINKER_FLAGS "-lc++abi")
include_directories(${CastorTest_SOURCE_DIR}/src)
add_executable(CastorTest ${CastorTest_SOURCE_DIR}/src/euler_castor.cc)
#add_executable(VaultExample ${CastorTest_SOURCE_DIR}/src/vault.cc)
add_executable(Euler ${CastorTest_SOURCE_DIR}/src/euler_stdcc.cc)
#add_executable(Eureqa ${CastorTest_SOURCE_DIR}/src/eureqa.cc)
#add_executable(Tests ${CastorTest_SOURCE_DIR}/src/tests.cc)
#target_link_libraries(Eureqa /usr/local/lib/libboost_serialization.a /usr/local/lib/libboost_thread.a /usr/local/lib/libboost_system.a pthread)
